@@ -1,4 +1,8 @@
 Version 1.7.0-svn:
+ * Graphics:
+   * The ~RC() image functor does not accept the special palette switch
+     ~RC(palette1=palette2) syntax anymore. ~PAL(palette1>palette2) should
+     be used instead
  * Language and i18n:
    * updated translations: German, Finnish, Hebrew, Italian, Turkish
  * FormulaAI:
